# P3

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: LoadDefaults.cmake
include/: app_config.h  cli.h  config_defaults.h.in  decision.h  exclude.h  logger.h  path_utils.h  sync_engine.h  webdav_client.h
src/: cli.cpp  decision.cpp  exclude.cpp  logger.cpp  main.cpp  path_utils.cpp  sync_engine.cpp  webdav_client.cpp
tests/: CMakeLists.txt
tests/e2e/: test_e2e.py
tests/integration/: mock_webdav_server.py  test_integration.py
tests/unit/: test_main.cpp
